# MC_AI

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
configs/: default.yaml  script_quan_tay.txt
docs/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  ROADMAP.md  TASKS.md
docs/PHASES/: PHASE_00.md  PHASE_01.md  PHASE_02.md  PHASE_03.md  PHASE_04.md  PHASE_05.md  PHASE_06.md
docs/SPRINTS/: SPRINT_00.md  SPRINT_01.md  SPRINT_02.md  SPRINT_03.md
scripts/: debug_mouth.py  detect_face_parts.py  test_avatar.py  test_tts.py  test_tts_stream.py
src/: __init__.py  main.py
src/automation/: __init__.py
src/avatar/: __init__.py  lip_sync.py
src/streaming/: __init__.py
src/utils/: __init__.py  config.py  logger.py
src/voice/: __init__.py  tts.py
tests/: __init__.py
