[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-mc"
version = "0.1.0"
description = "AI MC Live Stream - Hệ thống MC ảo tự động livestream với giọng nói và khẩu hình"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "hieungrx"}
]

dependencies = [
    "PyYAML==6.0.2",
    "edge-tts==6.1.19",
    "opencv-python==4.11.0.86",
    "numpy==2.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
